[package]
name = "enum-code"
version = "0.1.1"
edition = "2021"
categories = ["rust-patterns"]
authors = ["Kunduin <kunduin@outlook.com>"]
documentation = "https://docs.rs/enum-code"
repository = "https://github.com/Kunduin/enum-code"
homepage = "https://github.com/Kunduin/enum-code"
description = "derive(Code) simplifies error handling by providing an easy-to-use enumeration of error codes"
keywords = ["error", "error-handling", "derive", "enum"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "^1"
syn = "^2"
